--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 
 <h2>Latest Posts:</h2>
 <ul>
-  {% for post in site.posts limit: 5 %}
+  {% for post in site.posts reversed limit:5 %}
     <li>
       <a href="{{ post.url }}">{{ post.date | date: "%B %-d, %Y" }} - {{ post.title }}</a>
     </li>
