--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@ layout: default
   I'm a software engineer working remotely out of the greater Fayetteville
   Arkansas area. I graduated from the University of Arkansas in December of
   2016 with my Bachelors of Science in Electrical Engineering. Right out of
-  college I worked at L3Harris Technologies in Greenville Texas. While there,
+  college, I worked at L3Harris Technologies in Greenville Texas. While there,
   I discovered my love of Software. I did everything from DSP algorithm
-  development, to web service development, to FE web development, and eventually
-  to CI/CD pipeline development. After several years of working there, I found a
-  job working a J.B. Hunt Transportation. While at J.B. Hunt, I have been working
-  on Spring Boot and Quarkus applications for the
+  development, to web service development, to front-end web development, and eventually
+  even CI/CD pipeline development. After several years of working there, I found a
+  job working a J.B. Hunt Transportation. While at J.B. Hunt, I worked on Spring Boot
+  and Quarkus applications for the
   <a href="https://www.jbhunt.com/our-technology/carrier-360.html">Carrier 360</a>
-  platform.
+  platform. Currently I work at Red Hat as a software engineer and spend most of my
+  time maintaining the existing exam scheduler front-end and back-end as well as
+  migrating from the existing legacy Spring back-end and Angular front-end to
+  a suite of Python microservices and a React front-end.
 </p>
 
 <h2>My Hobbies:</h2>
 <p>
-  I love dabbling in Linux and BSD system administration, and ricing my own Linux
-  desktop. I also love playing games like Factorio, Feed the Beast (Minecraft with
-  mods), and the occasional shooter like Doom. Despite my love of gaming, I do not
-  own a Windows or Mac computer. All of my computers and networking equipment runs
-  some form of BSD or Linux.
+  I love spending time with my wife and son, playing folk and bluegrass music on my guitar,
+  and playing various games like Factorio and Kerbal Space Program. Despite my love of gaming,
+  I do not own a Windows or Mac computer.
 </p>
 
 <h2>Latest Posts:</h2>
